...
          ))}
        </View>
      )}
      {onAddPlan ? (
        <Button
          title={t('New Plan')}
          testID="market-new-plan"
          style={styles.newPlan}
          onPress={() => onAddPlan(day)}
        />
      ) : null}
    </View>
  );
...
